@@ -24,6 +24,11 @@ Zope Changes
 
     Features added
 
+     - Recataloging a ZCatalog instance is now more safe and predictable.
+       Indexing errors are catched and logged. In addition the progress of the
+       recataloging operation is logged. So one can see how much documents are
+       already processed and how much documents are remaining.
+
      - AccessControl/permission_settings() now has a new optional parameter
        'permission' to retrieve the permission settings for a particular
        permission.
